--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "secure-rng",
-  "version": "1.0.2",
-  "main": "dist/index.js",
+  "version": "1.0.5",
+  "main": "index.js",
   "license": "MIT",
   "description": "Generating secure random numbers.",
   "repository": "https://github.com/centrual/secure-rng.git",
-  "keywords": ["random", "rng", "secure", "generator", "crypto", "bignumber", "decimal"],
+  "keywords": [
+    "random",
+    "rng",
+    "secure",
+    "generator",
+    "crypto",
+    "bignumber",
+    "decimal"
+  ],
   "author": {
     "name": "Oğuz Özcan",
     "email": "hello@oguzozcan.com",
@@ -13,13 +21,15 @@
   },
   "scripts": {
     "build": "del-cli dist && tsc",
-    "test": "jest"
+    "test": "jest",
+    "pub": "cpy package.json dist && cpy README.md dist && cpy .npmignore dist && cpy LICENSE dist && cd dist && npm publish"
   },
   "devDependencies": {
     "@types/jest": "^24.9.1",
     "@types/node": "^13.5.0",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
+    "cpy-cli": "^3.0.0",
     "del-cli": "^3.0.0",
     "eslint": "^6.8.0",
     "jest": "^25.1.0",
