(Fixed) global.crypto is readonly on browser environment.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -63,7 +63,10 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
 
     /* Advanced Options */
-    "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
+    "forceConsistentCasingInFileNames": true,  /* Disallow inconsistently-cased references to the same file. */
+    "typeRoots": [
+      "node_modules/@types"
+    ]
   },
   "include": [
     "src"
